k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      volumes:
      - name: geoip-db
        persistentVolumeClaim:
          claimName: geoip-pvc
      containers:
      - name: backend
        image: ghcr.io/kubosis/pwndepot/backend:75218fd
        ports:
        - containerPort: 8000

        # 1. Load Secrets (DB passwords, Secret Keys)
        volumeMounts:
        - name: geoip-db
          mountPath: /project/assets
          readOnly: true
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
