k8s/ingress-challenge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-challenge-rewrite@kubernetescrd
spec:
  tls:
  - hosts:
    - pwndep0t.com
    secretName: pwndepot-tls
  rules:
  - host: pwndep0t.com
    http:
      paths:
      - path: /challenge/i/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
