k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - pwndep0t.com
    secretName: pwndepot-tls
  rules:
  - host: pwndep0t.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
            service:
              name: backend
              port:
                number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
